Edited wiki page MYSQL through web user interface.

--- a/wiki/MYSQL.wiki
+++ b/wiki/MYSQL.wiki
@@ -7,4 +7,6 @@ ALTER EVENT demonioEvmeval
 ON SCHEDULE 
 EVERY 1 HOUR
 STARTS '2014-05-02 16:00:00' ;
+SELECT * FROM INFORMATION_SCHEMA.EVENTS
+WHERE EVENT_SCHEMA='mmsi_sped';
 </code>
