--- a/wiki/Pendientes_Carlos.wiki
+++ b/wiki/Pendientes_Carlos.wiki
@@ -1,6 +1,8 @@
 #summary Pendientes de Carlos
 
 Pendientes:
-  * arreglar el backing de planificar, se esta llamando a entidades!. Va contra la arquitectura. 
-  * En planificar se llama al getSession(USER) en metodos, deberia estar arriba en la declaracion. 
+  * Si el usuario es un subdirector y entra al dash de desempeno de profsores, le permite elegir en el combo de sedes cualquier sede, debe bloquearse con su respectiva sede.
+  * En el dash de profesores cuando doy agregar sin haber escojido filtros se cae, justo se cae en el BDL porque llama a un getSingleResult, ya se menciono que no se debe usar ese metodo, sino el getResultList, si se desea solo 1 registro se tiene que hacer list.get(0), ver en otros BDL como se hace.
+  * Arreglar el backing de planificar, se esta llamando a entidades!. Va contra la arquitectura. 
+  * En planificar Evaluacion se llama al getSession(USER) en metodos, deberia estar arriba en la declaracion. 
   * En consultar planificaciones se esta usando IF innecesarios.
