Edited wiki page Pendiente_Parte_de_Ocurrencia through web user interface.

--- a/wiki/Pendiente_Parte_de_Ocurrencia.wiki
+++ b/wiki/Pendiente_Parte_de_Ocurrencia.wiki
@@ -1,4 +1,4 @@
-#summary Listado de pendientes en parte de ocurrencia
+#summary Listado de pendientes en parte de ocurrencia Diego
 
 =Pendientes en Parte de Ocurrencia=
 
