--- a/wiki/Pendientes_Carlos.wiki
+++ b/wiki/Pendientes_Carlos.wiki
@@ -2,7 +2,8 @@
 
 Pendientes:
   # *Si el usuario es un subdirector y entra al dash de desempeno de profsores, le permite elegir en el combo de sedes cualquier sede, debe bloquearse con su respectiva sede.
-  # En el dash de profesores cuando doy agregar sin haber escojido filtros se cae, justo se cae en el BDL porque llama a un getSingleResult, ya se menciono que no se debe usar ese metodo, sino el getResultList, si se desea solo 1 registro se tiene que hacer list.get(0), ver en otros BDL como se hace*.
+  # En el dash de profesores cuando doy agregar sin haber escojido filtros se cae, justo se cae en el BDL porque llama a un getSingleResult, ya se menciono que no se debe usar ese metodo, sino el getResultList, si se desea solo 1 registro se tiene que hacer list.get(0), ver en otros BDL como se hace.
+  # El sistema debe permitir registrar planificaciones de subdirector y evaluador en una misma aula misma hora, debe tambien permitir visualizar al usuario que ya hay una planificacion, para que este advertido que ese dia habra alguien mas*.
   # Arreglar el backing de planificar, se esta llamando a entidades!. Va contra la arquitectura. 
   # En planificar Evaluacion se llama al getSession(USER) en metodos, deberia estar arriba en la declaracion. 
   # En consultar planificaciones se esta usando IF innecesarios.
