Edited wiki page Pendientes_Carlos through web user interface.

--- a/wiki/Pendientes_Carlos.wiki
+++ b/wiki/Pendientes_Carlos.wiki
@@ -9,8 +9,8 @@ Pendientes:
   # En consultar planificaciones se esta usando IF innecesarios.
   # ~~Mostrar hora salida en el generar reestricciones~~.
   # ~~Validar horaInicio que no sea mayor o igual que la horaFin~~.
-  # Usar panelBox para agrupar los grupos de componentes
+  # ~~Usar panelBox para agrupar los grupos de componentes~~
   # Validar cruces en recreos y almuerzos
-  # No se puede configurar cuando haya horarios
+  # ~~No se puede configurar cuando haya horarios~~
   # ~~No poner todo en mayuscula los botones~~
-  # Acomodar la interface, muy separado los componentes
+  # ~~Acomodar la interface, muy separado los componentes~~
