--- a/wiki/Pendientes_Carlos.wiki
+++ b/wiki/Pendientes_Carlos.wiki
@@ -6,7 +6,7 @@ Pendientes:
   # El sistema debe permitir registrar planificaciones de subdirector y evaluador en una misma aula misma hora, debe tambien permitir visualizar al usuario que ya hay una planificacion, para que este advertido que ese dia habra alguien mas*.
   # ~~Arreglar el backing de planificar, se esta llamando a entidades!. Va contra la arquitectura. ~~
   # ~~En planificar Evaluacion se llama al getSession(USER) en metodos, deberia estar arriba en la declaracion. ~~
-  # En consultar planificaciones se esta usando IF innecesarios.
+  #  ~~En consultar planificaciones se esta usando IF innecesarios. ~~
   # ~~Mostrar hora salida en el generar reestricciones~~.
   # ~~Validar horaInicio que no sea mayor o igual que la horaFin~~.
   # ~~Usar panelBox para agrupar los grupos de componentes~~
