Edited wiki page Pendientes_Sistema through web user interface.

--- a/wiki/Pendientes_Sistema.wiki
+++ b/wiki/Pendientes_Sistema.wiki
@@ -14,6 +14,9 @@
   # Acomodar los tags f:view que tenga solo 1 raiz los jsff
   # Modulo de continuidad de negocio
   # Dash visualizar hora de planificacion vs. hora de evaluacion
+  # Agrandar la pantalla de comentario en consultar evas.
+  # Grabados parciales al evaluar.
+  # Enviar el word de evaluacion x correo.
   # ~~Error login aplicativo sped~~
   # ~~Busqueda con tecla en registrar ficha y otras mejoras~~.
   # ~~Ver porque imprime tanto en la consola.(un solo componente dentro del f:view)~~
