Edited wiki page Pendientes_Sistema through web user interface.

--- a/wiki/Pendientes_Sistema.wiki
+++ b/wiki/Pendientes_Sistema.wiki
@@ -17,6 +17,7 @@
   # Agrandar la pantalla de comentario en consultar evas.
   # Grabados parciales al evaluar.
   # Enviar el word de evaluacion x correo.
+  # Alertar por correo cuando se evaluo al profesor.
   # ~~Error login aplicativo sped~~
   # ~~Busqueda con tecla en registrar ficha y otras mejoras~~.
   # ~~Ver porque imprime tanto en la consola.(un solo componente dentro del f:view)~~
