Edited wiki page Buenas_Practicas through web user interface.

--- a/wiki/Buenas_Practicas.wiki
+++ b/wiki/Buenas_Practicas.wiki
@@ -30,3 +30,6 @@ http://oi60.tinypic.com/22ymf8.jpg
   9) *Abuso del mapper*: No usen el mapper si solo traeran algunos datos, se usa cuando necesitan traer objetos de objetos etc y solo si usaran la mayoria de sus atributos, sino usen como los queries de llenarCombo que de frente mando al Bean los datos.
 
   10) *Eliminar código que no usan*: ya sean variables o métodos que no usen, borrarlos! hay que reducir las lineas de código de la aplicación.
+
+  11) *Etiqueta view*: En los jsff la etiqueta f:view que es la que engloba todo debería tener solo 1 hijo, como se muestra aquí en la imagen, pueden usar el componente panelGroupLayout
+http://oi59.tinypic.com/5n7rxw.jpg
