--- a/wiki/Buenas_Practicas.wiki
+++ b/wiki/Buenas_Practicas.wiki
@@ -5,7 +5,7 @@ Team,
 Para que nuestro sistema SPED tenga la calidad necesaria para decir que es un buen sistema hecho por futuros ingenieros de la URP, debemos aplicar practicas a la hora de desarrollar, beneficiando en un futuro mantenimiento ya sea por Uds. mismos u otras personas, ayudará en la rapidez de respuesta del sistema, menos lineas de código innecesario y reusabilidad.
 
 
-  # *Formato del codigo*: no basta con darle click derecho format, sino que este ordenado sin dejar muchos espacios entre lineas de codigo, quitar sysouts innecesarios, comentar el codigo para facilidad de mantenimiento, etc. [http://oi60.tinypic.com/14njq0h.jpg]
+  # *Formato del codigo*: no basta con darle click derecho format, sino que este ordenado sin dejar muchos espacios entre lineas de codigo, quitar sysouts innecesarios, comentar el codigo para facilidad de mantenimiento, etc. [http://oi60.tinypic.com/14njq0h.jpg Ver Imagen]
 
   # Orden en la definicion de variables en los backing, en los backing arriba debe ir primero el codigo generado cuando hacen binding de un componente y por debajo las variables que Uds definan. Fijanse en la imagen usando /** Mis Variables **/ divido los variables generadas de mis variables y en mis variables primero los EJB luego los string, int, boolean etc, mantengan un orden.
 Ojo con los imports, borren imports que no usen y que no haya espacios entre los imports todo pegadito. [http://oi58.tinypic.com/9r1yjb.jpg]
