--- a/wiki/Logica_EVMEVAL.wiki
+++ b/wiki/Logica_EVMEVAL.wiki
@@ -2,43 +2,26 @@
 
 {{{
 ALTER TABLE `mmsi_sped`.`evmeval` 
-ADD COLUMN `flg_estado` VARCHAR(3) NULL COMMENT 'Indicador que va de la 
-
-mano con el estado_evaluacion, para implementar la logica del demonio que cambia los estados' AFTER 
-
-`modo_evaluacion`;
-ALTER TABLE `mmsi_sped`.`evmeval` 
-ADD COLUMN `flg_evaluar` VARCHAR(1) NULL COMMENT 'Si esta en 1 quiere 
-
-decir que se puede Evaluar, de lo contrario no se podra.' AFTER `flg_estado`,
-ADD COLUMN `flg_anular` 
-
-VARCHAR(1) NULL COMMENT 'Si esta en 1 quiere decir que se puede anular, de lo contrario no se podra. Si esta 
-
-en 1 no se puede anular' AFTER `flg_evaluar`,
-ADD COLUMN `flg_justificar` VARCHAR(1) NULL COMMENT 'Si esta en 
-
-1 quiere decir que se puede justificar, aqui no se puede evaluar ni anular. Si esta en 0 ya no se podra 
-
-justificar es decir estara en estado INJUSTIFICADO' AFTER `flg_anular`;
+ADD COLUMN `flg_estado` VARCHAR(3) NULL COMMENT 'Indicador que va de la mano con el estado_evaluacion, para implementar la logica del demonio que cambia los estados' AFTER `modo_evaluacion`;
+ALTER TABLE `mmsi_sped`.`evmeval` ADD COLUMN `flg_evaluar` VARCHAR(1) NULL COMMENT 'Si esta en 1 quiere decir que se puede Evaluar, de lo contrario no se podra.' AFTER `flg_estado`,ADD COLUMN `flg_anular` VARCHAR(1) NULL COMMENT 'Si esta en 1 quiere decir que se puede anular, de lo contrario no se podra. Si esta en 1 no se puede anular' AFTER `flg_evaluar`,ADD COLUMN `flg_justificar` VARCHAR(1) NULL COMMENT 'Si esta en 1 quiere decir que se puede justificar, aqui no se puede evaluar ni anular. Si esta en 0 ya no se podra justificar es decir estara en estado INJUSTIFICADO' AFTER `flg_anular`;
 }}}
 
 *Carlos:*
-al momento de registrar una planificacion considerar, esos campos setealos, ya estan en el mapeo:
+Al momento de registrar una planificación considerar:
 
-flg_estado = 'PEN'
-flg_evaluar = '1'
-flg_anular = '1'
-flg_justificar = '0'
+  * flg_estado = 'PEN'
+  * flg_evaluar = '1'
+  * flg_anular = '1'
+  * flg_justificar = '0'
 
 *Diego:*
 Al evaluar:
-flg_estado = 'EVA'
-flg_evaluar = '0'
-flg_anular = '0'
-flg_justificar = '0'
+  * flg_estado = 'EVA'
+  * flg_evaluar = '0'
+  * flg_anular = '0'
+  * flg_justificar = '0'
 
-ese flg_anular te servira para ver si puedes anularlo o no, tambien considera si se lo planifico otro.
+Ese flg_anular servirá para ver si puedes anularlo o no, también considera si se lo planifico otro.
 
 Ahora hay 6 estados para evmeval:
 
