Edited wiki page Logica_EVMEVAL through web user interface.

--- a/wiki/Logica_EVMEVAL.wiki
+++ b/wiki/Logica_EVMEVAL.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#Logica y codigo para implementar la nueva manera de manejar los estados en evmeval
 
 <code>
 
