Edited wiki page Logica_EVMEVAL through web user interface.

--- a/wiki/Logica_EVMEVAL.wiki
+++ b/wiki/Logica_EVMEVAL.wiki
@@ -1,4 +1,4 @@
-#Logica y código para implementar la nueva manera de manejar los estados en evmeval
+#summary Logica y código para implementar la nueva manera de manejar los estados en evmeval
 
 <code>
 
