Edited wiki page Log_Errores_Ejemplo through web user interface.

--- a/wiki/Log_Errores_Ejemplo.wiki
+++ b/wiki/Log_Errores_Ejemplo.wiki
@@ -1,4 +1,4 @@
-#Ejemplo de como implementar el Log de errores en el sistema
+#summary Ejemplo de como implementar el Log de errores en el sistema
 
 = Que es esto? =
 
