--- a/wiki/Logica_EVMEVAL.wiki
+++ b/wiki/Logica_EVMEVAL.wiki
@@ -26,6 +26,108 @@ ADD COLUMN `flg_justificar` VARCHAR(1) NULL
 COMMENT 'Si esta en 1 quiere decir que se puede justificar, aqui no se puede evaluar ni anular. Si esta en 0 ya no se podra justificar es decir estara en estado INJUSTIFICADO' 
 AFTER `flg_anular`;
 
+-- --------------------------------------------------------------------------------
+-- Routine DDL
+-- Author czavalacas
+-- Author Modificador dfloresgonz
+-- DATE_ADD(end_Date,INTERVAL 59 MINUTE)
+-- Note: comments before and after the routine body will not be stored by the server
+-- --------------------------------------------------------------------------------
+DELIMITER $$
+
+CREATE DEFINER=`mmsi_sped`@`%` PROCEDURE `procedureDemonioEvmeval`()
+BEGIN
+DECLARE idLogC   	  VARCHAR(50);
+DECLARE numPEN_NE     INT; -- Nro de pendientes que pasaran a NO_EJECUTADOS
+DECLARE descripC 	  VARCHAR(250);
+
+SELECT count(1) 
+INTO numPEN_NE 
+FROM evmeval 
+WHERE estado_evaluacion = 'PENDIENTE' 
+AND end_Date < now(); 
+
+SELECT uuid()
+INTO idlogC;
+
+IF(numPEN_NE > 0) THEN
+	SELECT CONCAT('Se actualizaron ',numPEN_NE , ' planificaciones de PENDIENTE a NO EJECUTADO el dÃ­a ', now()) 
+	INTO descripC;
+
+	INSERT INTO stdlogd VALUES (idlogC , 2, descripC, now(),'1');
+	SET SQL_SAFE_UPDATES = 0;
+	UPDATE evmeval 
+	SET estado_evaluacion = 'NO EJECUTADO',
+		cidLogd = idlogC,
+		flg_justificar = '0', -- No puede justificar
+		flg_evaluar = '1',-- Aun puede EVALUAR
+		flg_anular = '0', -- YA NO PUEDE ANULAR
+		flg_estado = 'PEN' -- Le cambia de estado pero aun se debe poder evaluar, tiene 1 dia extra, esto es para saber que se le paso la hora
+	WHERE estado_evaluacion = 'PENDIENTE' 
+	AND end_Date < now();
+END IF;
+
+SET numPEN_NE = 0;
+SET idlogC = NULL;
+
+SELECT count(1) 
+INTO numPEN_NE 
+FROM evmeval 
+WHERE estado_evaluacion = 'NO EJECUTADO' 
+AND DATE_ADD(end_Date,INTERVAL 24 HOUR) < now(); 
+
+SELECT uuid()
+INTO idlogC;
+
+IF(numPEN_NE > 0) THEN
+	SELECT CONCAT('Se actualizaron ',numPEN_NE , ' planificaciones de NO EJECUTADO a POR JUSTIFICAR el dÃ­a ', now()) 
+	INTO descripC;
+
+	INSERT INTO stdlogd VALUES (idlogC , 2, descripC, now(),'1');
+	SET SQL_SAFE_UPDATES = 0;
+	UPDATE evmeval 
+	SET estado_evaluacion = 'POR JUSTIFICAR',
+		cidLogd = idlogC,
+		flg_justificar = '1', -- Recien podra justificar, tiene 1 dia
+		flg_evaluar = '0',-- Ya no puede EVALUAR
+		flg_anular = '0', -- YA NO PUEDE ANULAR
+		flg_estado = 'XJUS' -- Le cambia de estado pero aun se debe poder evaluar, tiene 1 dia extra, esto es para saber que se le paso la hora
+	WHERE estado_evaluacion = 'NO EJECUTADO' 
+	AND DATE_ADD(end_Date,INTERVAL 24 HOUR) < now();
+END IF;
+
+SET numPEN_NE = 0;
+SET idlogC = NULL;
+
+SELECT count(1) 
+INTO numPEN_NE 
+FROM evmeval 
+WHERE estado_evaluacion = 'POR JUSTIFICAR' 
+AND DATE_ADD(end_Date,INTERVAL 48 HOUR) < now(); -- Se cambiara a INJUSTIFICADO si pasan 2 dias
+
+SELECT uuid()
+INTO idlogC;
+
+IF(numPEN_NE > 0) THEN
+	SELECT CONCAT('Se actualizaron ',numPEN_NE , ' planificaciones de POR JUSTIFICAR a INJUSTIFICADO el dÃ­a ', now()) 
+	INTO descripC;
+
+	INSERT INTO stdlogd VALUES (idlogC , 2, descripC, now(),'1');
+	SET SQL_SAFE_UPDATES = 0;
+	UPDATE evmeval 
+	SET estado_evaluacion = 'INJUSTIFICADO',
+		cidLogd = idlogC,
+		flg_justificar = '0', -- Recien podra justificar, tiene 1 dia
+		flg_evaluar = '0',-- Ya no puede EVALUAR
+		flg_anular = '0', -- YA NO PUEDE ANULAR
+		flg_estado = 'NJUS' -- Le cambia de estado pero aun se debe poder evaluar, tiene 1 dia extra, esto es para saber que se le paso la hora
+	WHERE estado_evaluacion = 'POR JUSTIFICAR' 
+	AND DATE_ADD(end_Date,INTERVAL 48 HOUR) < now();
+END IF;
+
+INSERT INTO stdlogd VALUES (idlogC , 2, 'Se ejecuto el Demonio', now(),'0');
+
+END
 </code>
 
 *Carlos:*
