Edited wiki page Pendientes_Sistema through web user interface.

--- a/wiki/Pendientes_Sistema.wiki
+++ b/wiki/Pendientes_Sistema.wiki
@@ -17,7 +17,7 @@
   # Agrandar la pantalla de comentario en consultar evas.
   # Grabados parciales al evaluar.
   # Enviar el word de evaluacion x correo.
-  # Alertar por correo cuando se evaluó al profesor.
+  # ~~Alertar por correo cuando se evaluó al profesor.~~
   # En la cabecera al lado de la foto si es eva de sede, mostrar que sede, si es de area, mostrar que area.
   # ~~Error login aplicativo sped~~
   # ~~Busqueda con tecla en registrar ficha y otras mejoras~~.
