--- a/wiki/Logica_EVMEVAL.wiki
+++ b/wiki/Logica_EVMEVAL.wiki
@@ -26,6 +26,9 @@ ADD COLUMN `flg_justificar` VARCHAR(1) NULL
 COMMENT 'Si esta en 1 quiere decir que se puede justificar, aqui no se puede evaluar ni anular. Si esta en 0 ya no se podra justificar es decir estara en estado INJUSTIFICADO' 
 AFTER `flg_anular`;
 
+ALTER TABLE `mmsi_sped`.`evmeval` 
+DROP COLUMN `flg_estado`;
+
 -- --------------------------------------------------------------------------------
 -- Routine DDL
 -- Author czavalacas
@@ -38,7 +41,7 @@ DELIMITER $$
 CREATE DEFINER=```mmsi_sped```@```%``` PROCEDURE ```procedureDemonioEvmeval```()
 BEGIN
 DECLARE idLogC   	  VARCHAR(50);
-DECLARE numPEN_NE     INT; -- Nro de pendientes que pasaran a NO_EJECUTADOS
+DECLARE numPEN_NE         INT; -- Nro de pendientes que pasaran a NO_EJECUTADOS
 DECLARE descripC 	  VARCHAR(250);
 
 SELECT count(1) 
@@ -51,7 +54,7 @@ SELECT uuid()
 INTO idlogC;
 
 IF(numPEN_NE > 0) THEN
-	SELECT CONCAT('Se actualizaron ',numPEN_NE , ' planificaciones de PENDIENTE a NO EJECUTADO el dÃ­a ', now()) 
+	SELECT CONCAT('Se actualizaron ',numPEN_NE , ' planificaciones de PENDIENTE a NO EJECUTADO el di­a ', now()) 
 	INTO descripC;
 
 	INSERT INTO stdlogd VALUES (idlogC , 2, descripC, now(),'1');
@@ -80,7 +83,7 @@ SELECT uuid()
 INTO idlogC;
 
 IF(numPEN_NE > 0) THEN
-	SELECT CONCAT('Se actualizaron ',numPEN_NE , ' planificaciones de NO EJECUTADO a POR JUSTIFICAR el dÃ­a ', now()) 
+	SELECT CONCAT('Se actualizaron ',numPEN_NE , ' planificaciones de NO EJECUTADO a POR JUSTIFICAR el di­a ', now()) 
 	INTO descripC;
 
 	INSERT INTO stdlogd VALUES (idlogC , 2, descripC, now(),'1');
@@ -109,7 +112,7 @@ SELECT uuid()
 INTO idlogC;
 
 IF(numPEN_NE > 0) THEN
-	SELECT CONCAT('Se actualizaron ',numPEN_NE , ' planificaciones de POR JUSTIFICAR a INJUSTIFICADO el dÃ­a ', now()) 
+	SELECT CONCAT('Se actualizaron ',numPEN_NE , ' planificaciones de POR JUSTIFICAR a INJUSTIFICADO el di­a ', now()) 
 	INTO descripC;
 
 	INSERT INTO stdlogd VALUES (idlogC , 2, descripC, now(),'1');
@@ -132,15 +135,12 @@ END
 
 *Carlos:*
 Al momento de registrar una planificación considerar:
-
-  * flg_estado = 'PEN'
   * flg_evaluar = '1'
   * flg_anular = '1'
   * flg_justificar = '0'
 
 *Diego:*
 Al evaluar:
-  * flg_estado = 'EVA'
   * flg_evaluar = '0'
   * flg_anular = '0'
   * flg_justificar = '0'
