Edited wiki page Pendientes_Sistema through web user interface.

--- a/wiki/Pendientes_Sistema.wiki
+++ b/wiki/Pendientes_Sistema.wiki
@@ -14,7 +14,7 @@
   # Acomodar los tags f:view que tenga solo 1 raiz los jsff
   # Modulo de continuidad de negocio
   # Dash visualizar hora de planificacion vs. hora de evaluacion
-  # Agrandar la pantalla de comentario en consultar evas.
+  # ~~Agrandar la pantalla de comentario en consultar evas.~~
   # Grabados parciales al evaluar.
   # Enviar el word de evaluacion x correo.
   # ~~Alertar por correo cuando se evaluó al profesor.~~
